--- a/pyproject.toml
+++ b/pyproject.toml
@@ -14,7 +14,8 @@ dependencies = [
     "django-ckeditor (>=6.7.2,<7.0.0)",
     "djangorestframework-simplejwt (>=5.4.0,<6.0.0)",
     "pillow (>=11.1.0,<12.0.0)",
-    "django-cors-headers (>=4.7.0,<5.0.0)"
+    "django-cors-headers (>=4.7.0,<5.0.0)",
+    "pre-commit (>=4.1.0,<5.0.0)"
 ]
 
 
