some changes to pre-commit

--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -43,4 +43,4 @@ repos:
     hooks:
     -   id: mypy
         additional_dependencies: [types-pyyaml]
-        exclude: ^tests|alembic
+        exclude: ^tests|migrations
