--- a/pyproject.toml
+++ b/pyproject.toml
@@ -17,7 +17,8 @@ dependencies = [
     "django-cors-headers (>=4.7.0,<5.0.0)",
     "pre-commit (>=4.1.0,<5.0.0)",
     "flake8 (>=7.1.1,<8.0.0)",
-    "mypy (>=1.15.0,<2.0.0)"
+    "mypy (>=1.15.0,<2.0.0)",
+    "psycopg2-binary (>=2.9.10,<3.0.0)"
 ]
 
 
