--- a/pyproject.toml
+++ b/pyproject.toml
@@ -18,7 +18,10 @@ dependencies = [
     "pre-commit (>=4.1.0,<5.0.0)",
     "flake8 (>=7.1.1,<8.0.0)",
     "mypy (>=1.15.0,<2.0.0)",
-    "psycopg2-binary (>=2.9.10,<3.0.0)"
+    "psycopg2-binary (>=2.9.10,<3.0.0)",
+    "django-extensions (>=3.2.3,<4.0.0)",
+    "ipython (>=8.32.0,<9.0.0)",
+    "drf-yasg (>=1.21.8,<2.0.0)"
 ]
 
 
