--- a/pyproject.toml
+++ b/pyproject.toml
@@ -11,7 +11,6 @@ requires-python = ">=3.11"
 dependencies = [
     "django (>=5.1.6,<6.0.0)",
     "djangorestframework (>=3.15.2,<4.0.0)",
-    "django-ckeditor (>=6.7.2,<7.0.0)",
     "djangorestframework-simplejwt (>=5.4.0,<6.0.0)",
     "pillow (>=11.1.0,<12.0.0)",
     "django-cors-headers (>=4.7.0,<5.0.0)",
@@ -21,7 +20,9 @@ dependencies = [
     "psycopg2-binary (>=2.9.10,<3.0.0)",
     "django-extensions (>=3.2.3,<4.0.0)",
     "ipython (>=8.32.0,<9.0.0)",
-    "drf-yasg (>=1.21.8,<2.0.0)"
+    "drf-yasg (>=1.21.8,<2.0.0)",
+    "django-ckeditor-5 (>=0.2.17,<0.3.0)",
+    "django-ckeditor (>=6.7.2,<7.0.0)"
 ]
 
 
